--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple node.js library to fetch Tallinn public transportation data.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +23,9 @@
     "url": "https://github.com/iliaivanov/tallinn-soiduplaan-data/issues"
   },
   "homepage": "https://github.com/iliaivanov/tallinn-soiduplaan-data#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.19.0"
+  },
   "dependencies": {
     "axios": "^0.15.3",
     "fs": "0.0.1-security"
