Added tests for fileSystemHelper

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha tests/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/iliaivanov/tallinn-soiduplaan-data#readme",
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "expect": "^1.20.2",
+    "mocha": "^3.4.1"
   },
   "dependencies": {
     "axios": "^0.15.3",
