--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/iliaivanov/tallinn-soiduplaan-data#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "eslint": "^3.19.0",
-    "expect": "^1.20.2",
     "mocha": "^3.4.1"
   },
   "dependencies": {
