--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node_modules/mocha/bin/mocha tests/**/*.test.js"
+    "test": "node_modules/mocha/bin/mocha tests/**/**/*.test.js tests/**/*.test.js"
   },
   "repository": {
     "type": "git",
